fixed relative path error

--- a/test/Dotnet.Tool.MD5.UnitTest/Dotnet.Tool.MD5.UnitTest.csproj
+++ b/test/Dotnet.Tool.MD5.UnitTest/Dotnet.Tool.MD5.UnitTest.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Dotnet.Tool.Md5\Dotnet.Tool.MD5.csproj" />
+    <ProjectReference Include="..\..\src\Dotnet.Tool.Md5\Dotnet.Tool.MD5.csproj" />
   </ItemGroup>
 
 </Project>
